--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de Tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*Shorthand- background
+            color>image> position > repeat>size > attachment
+            */
+            background:black url('imagens/wallpaper002.jpg') center center fixed;
+            background-size: cover;
+
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding:10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +35,8 @@
 <body>
     <main>
         <h1>teste de imagem do fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed harum maxime quibusdam fuga sunt laborum quidem sit debitis dolor nobis commodi recusandae eius similique excepturi, iure unde voluptatum earum aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, at, voluptates suscipit atque molestias ad expedita animi excepturi odit sequi tempore natus sit, autem quam rem aspernatur voluptatibus eum dolore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias consequatur quis accusamus, ipsa accusantium expedita sunt. Nostrum obcaecati eum facilis itaque molestias sed omnis excepturi recusandae, vitae fuga quod eos.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, maiores quae reprehenderit est tempore, optio atque non architecto eos sit quo quam et voluptatibus quisquam cupiditate odit possimus dolorem nostrum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus voluptates illum animi vitae sed mollitia vero ullam architecto repudiandae eius, dolores voluptatum nostrum. Beatae explicabo alias dicta recusandae fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed harum maxime quibusdam fuga sunt laborum quidem sit debitis dolor nobis commodi recusandae eius similique excepturi, iure unde voluptatum earum aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, at, voluptates suscipit atque molestias ad expedita animi excepturi odit sequi tempore natus sit, autem quam rem aspernatur voluptatibus eum dolore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias consequatur quis accusamus, ipsa accusantium expedita sunt. Nostrum obcaecati eum facilis itaque molestias sed omnis excepturi recusandae, vitae fuga quod eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam obcaecati neque cum quod, iste voluptatum dolores nam sunt mollitia praesentium dicta cupiditate est doloribus reprehenderit magni! Maiores expedita voluptatem Lorem ipsum dolor sit amet consectetur adipisicing elit. Id aut unde possimus numquam dolores fugit soluta ullam voluptatem perferendis recusandae explicabo, at, tempore illum consequatur commodi! Quod cum impedit soluta.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, maiores quae reprehenderit est tempore, optio atque non architecto eos sit quo quam et voluptatibus quisquam cupiditate odit possimus dolorem nostrum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus voluptates illum animi vitae sed mollitia vero ullam architecto repudiandae eius, dolores voluptatum nostrum. Beatae explicabo alias dicta recusandae fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed harum maxime quibusdam fuga sunt laborum quidem sit debitis dolor nobis commodi recusandae eius similique excepturi, iure unde voluptatum earum aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, at, voluptates suscipit atque molestias ad expedita animi excepturi odit sequi tempore natus sit, autem quam rem aspernatur voluptatibus eum dolore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias consequatur quis accusamus, ipsa accusantium expedita sunt. Nostrum obcaecati eum facilis itaque molestias sed omnis excepturi recusandae, vitae fuga quod eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam obcaecati neque cum quod, iste voluptatum dolores nam sunt mollitia praesentium dicta cupiditate est doloribus reprehenderit magni! Maiores expedita voluptatem Lorem ipsum dolor sit amet consectetur adipisicing elit. Id aut unde possimus numquam dolores fugit soluta ullam voluptatem perferendis recusandae explicabo, at, tempore illum consequatur commodi!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, maiores quae reprehenderit est tempore, optio atque non architecto eos sit quo quam et voluptatibus quisquam cupiditate odit possimus dolorem nostrum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus voluptates illum animi vitae sed mollitia vero ullam architecto repudiandae eius, dolores voluptatum nostrum. Beatae explicabo alias dicta recusandae fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed harum maxime quibusdam fuga sunt laborum quidem sit debitis dolor nobis commodi recusandae eius similique excepturi, iure unde voluptatum earum aliquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, at, voluptates suscipit atque molestias ad expedita animi excepturi odit sequi tempore natus sit, autem quam rem aspernatur voluptatibus eum dolore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias consequatur quis accusamus, ipsa accusantium expedita sunt. Nostrum obcaecati eum facilis itaque molestias sed omnis excepturi recusandae, vitae fuga quod eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam obcaecati neque cum quod, iste voluptatum dolores nam sunt mollitia praesentium dicta cupiditate est doloribus reprehenderit magni! Maiores expedita voluptatem Lorem ipsum dolor sit amet consectetur adipisicing elit. Id aut unde possimus numquam dolores fugit soluta ullam voluptatem perferendis recusandae explicabo, at, tempore illum consequatur commodi! Quod cum impedit soluta.
+        </p>
     </main>
 </body>
 </html>
