--- a/Desafios/desafio012/index.html
+++ b/Desafios/desafio012/index.html
@@ -41,7 +41,7 @@
 
             <section class="nomral">
                 <p>
-                    Arroba agora não pesa <br>
+                    Arrobaa agora não pesa <br>
                     É parte de um endereço <br>
                     Ponto final nem se usa <br>
                     Ou vai até no começo <br>
