--- a/Exercicios/ex024/iframe01.html
+++ b/Exercicios/ex024/iframe01.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Tetando o uso de um iframe</h1>
     <p> Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com/" frameborder="0" height="500" width="500" scolling"no"
+        ></iframe>
         Cursoemvideo para aprender a programar</p>
 </body>
 </html>
